crates/carta/tests/snapshots/golden_writer__beamer__links__autolink-decoded-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\url{http://example.com/a\%20b}

\url{http://example.com/a\%20b}
\end{frame}
