crates/carta/tests/snapshots/golden_writer__beamer__links__internal-anchor.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}{Section One}
\protect\phantomsection\label{section-one}
Back to \hyperref[section-one]{the section}, or an
\href{https://example.org/docs}{outside page}.
\end{frame}
