crates/carta/tests/snapshots/golden_writer__beamer__links__title-with-quote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\href{http://example.com/}{x}

\href{http://example.com/}{y}
\end{frame}
